<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/dlg_search_2_tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:text="@string/dlg_search_tv_message"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/dlg_search_2_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/dlg_search_2_cb_all_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_search_message_all_table"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/dlg_search_2_cb_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_search_message_file_name"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/darkolivegreen4"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/dlg_search_2_bt_ok"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/generic_bt_ok"
                android:textColor="@color/blue1"
                android:textSize="25dp" />

            <Button
                android:id="@+id/dlg_search_2_cancel"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/generic_bt_cancel"
                android:textColor="@color/red"
                android:textSize="25dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/gold2"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/dlg_search_2_LV"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp" >

        </ListView>

    </LinearLayout>

</LinearLayout>